# simpleCuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/1_branch_efficiency/: branch_efficiency.cu
src/common/: CMakeLists.txt  check_utils.h  common.h  time_utils.h  timer.cpp  timer.h
src/ops/: CMakeLists.txt  array_add.cu  matrix_add.cu  test.cu
